yamls/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: madmax1234/jenkins-docker-hub:1.0
        ports:
        - containerPort: 9090
